--- a/Day2_HW.ipynb
+++ b/Day2_HW.ipynb
@@ -1,1 +1,189 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"作業_題目Hong.ipynb","provenance":[],"collapsed_sections":[]},"kernelspec":{"name":"python3","display_name":"Python 3"}},"cells":[{"cell_type":"markdown","metadata":{"id":"CcQnaVToJoMC"},"source":["作業目標<br>\r\n","熟悉陣列維度轉換，並且會擷取需要資料<br>\r\n","作業重點<br>\r\n","使用reshap須注意order用法<br>\r\n","where可以運用邏輯條件擷取資料"]},{"cell_type":"markdown","metadata":{"id":"JKtCM_7rJqUp"},"source":["題目:<br>\r\n","1.將下列陣列(array1)，轉成維度為(5X6)的array，順序按列填充。(hint:order=\"F\")<br>\r\n","2.呈上題的array，找出被6除餘1的數的索引<br>"]},{"cell_type":"code","metadata":{"id":"9U3itXkFKqV4"},"source":["import numpy as np"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{"id":"kLjyVid_JpIC"},"source":["#1.將下列清單(list1)，轉成維度為(5X6)的array，順序按列填充。(hint:order=\"F\")\r\n","array1 = np.array(range(30))"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{"id":"X1PZ16iqXWOe"},"source":["#2.呈上題的array，找出被6除餘1的數的索引\r\n"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{"id":"XvRQhJxNxRPd"},"source":[""],"execution_count":null,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "CcQnaVToJoMC"
+   },
+   "source": [
+    "作業目標<br>\n",
+    "熟悉陣列維度轉換，並且會擷取需要資料<br>\n",
+    "作業重點<br>\n",
+    "使用reshap須注意order用法<br>\n",
+    "where可以運用邏輯條件擷取資料"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "JKtCM_7rJqUp"
+   },
+   "source": [
+    "題目:<br>\n",
+    "1.將下列陣列(array1)，轉成維度為(5X6)的array，順序按列填充。(hint:order=\"F\")<br>\n",
+    "2.呈上題的array，找出被6除餘1的數的索引<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "id": "9U3itXkFKqV4"
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "kLjyVid_JpIC"
+   },
+   "outputs": [],
+   "source": [
+    "#1.將下列清單(list1)，轉成維度為(5X6)的array，順序按列填充。(hint:order=\"F\")\n",
+    "array1 = np.array(range(30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array1 = np.array(range(30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = array1.reshape(5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4,  5],\n",
+       "       [ 6,  7,  8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15, 16, 17],\n",
+       "       [18, 19, 20, 21, 22, 23],\n",
+       "       [24, 25, 26, 27, 28, 29]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = a.ravel(order='F')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  6, 12, 18, 24,  1,  7, 13, 19, 25,  2,  8, 14, 20, 26,  3,  9,\n",
+       "       15, 21, 27,  4, 10, 16, 22, 28,  5, 11, 17, 23, 29])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "X1PZ16iqXWOe"
+   },
+   "outputs": [],
+   "source": [
+    "#2.呈上題的array，找出被6除餘1的數的索引\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "id": "XvRQhJxNxRPd"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([5, 6, 7, 8, 9], dtype=int64),)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(a%6 == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "作業_題目Hong.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
