--- a/Day4_HW.ipynb
+++ b/Day4_HW.ipynb
@@ -139,24 +139,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True,  True,  True,  True,  True])"
+       "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.logical_and(chinese_english, chinese_math)\n",
+    "np.logical_and(chinese_english, chinese_math).all()\n",
     "# 是"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
