--- a/Day6_HW.ipynb
+++ b/Day6_HW.ipynb
@@ -1,1 +1,137 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"作業Hong題目.ipynb","provenance":[],"collapsed_sections":[]},"kernelspec":{"name":"python3","display_name":"Python 3"}},"cells":[{"cell_type":"code","metadata":{"id":"jbkK8wprdbdY"},"source":[""],"execution_count":null,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"YWb4mnd4fqAG"},"source":["作業目標<br>\r\n","讀取存取陣列資料<br>\r\n","作業重點<br>\r\n","多陣列存一起需要存成npz，讀取須注意npz中有多個陣列"]},{"cell_type":"markdown","metadata":{"id":"UXV4vW6IfsW6"},"source":["題目:<br>\r\n","1. 將下兩列array存成npz檔<br>\r\n","array1 = np.array(range(30))<br>\r\n","array2 = np.array([2,3,5])<br>\r\n","2. 讀取剛剛的npz檔，加入下列array一起存成新的npz檔\r\n"]},{"cell_type":"code","metadata":{"id":"1mZQSUx_fry7"},"source":["#. 將下兩列array存成npz檔\r\n","array1 = np.array(range(30))\r\n","array2 = np.array([2,3,5])"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{"id":"Ie1TGcssiIDN"},"source":["#2. 讀取剛剛的npz檔，加入下列array一起存成新的npz檔"],"execution_count":null,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "id": "jbkK8wprdbdY"
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "YWb4mnd4fqAG"
+   },
+   "source": [
+    "作業目標<br>\n",
+    "讀取存取陣列資料<br>\n",
+    "作業重點<br>\n",
+    "多陣列存一起需要存成npz，讀取須注意npz中有多個陣列"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "UXV4vW6IfsW6"
+   },
+   "source": [
+    "題目:<br>\n",
+    "1. 將下兩列array存成npz檔<br>\n",
+    "array1 = np.array(range(30))<br>\n",
+    "array2 = np.array([2,3,5])<br>\n",
+    "2. 讀取剛剛的npz檔， 加入下列array一起存成新的npz檔\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "id": "1mZQSUx_fry7"
+   },
+   "outputs": [],
+   "source": [
+    "#. 將下兩列array存成npz檔\n",
+    "array1 = np.array(range(30))\n",
+    "array2 = np.array([2,3,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('temp.npz','wb') as f:\n",
+    "    np.savez(f, x=array1, y=array2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Ie1TGcssiIDN"
+   },
+   "outputs": [],
+   "source": [
+    "#2. 讀取剛剛的npz檔，加入下列array一起存成新的npz檔"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "npzfile = np.load('temp.npz')\n",
+    "x = npzfile['x']\n",
+    "y = npzfile['y']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = np.arange(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('temp1.npz','wb') as f:\n",
+    "    np.savez(f, x=x, y=y, z=z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "作業Hong題目.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
