--- a/Day12_HW.ipynb
+++ b/Day12_HW.ipynb
@@ -70,18 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "330.0"
+       "391.43"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -101,8 +101,7 @@
    "source": [
     "data = pd.read_csv('Desktop/homework/homework/homework/boston.csv')\n",
     "data.boxplot(figsize=(12,6))\n",
-    "# 位於300-400 中位數欄位 TAX\n",
-    "np.median(data['TAX'])"
+    "# 位於300-400 中位數欄位 TAX,B"
    ]
   },
   {
